[package]
name = "note"
version = "0.1.0"
authors = ["Navin Karkera <navin@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
structopt = { version = "0.3", default-features = false }
dialoguer = "0.5"
